# nbreak-econet

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yml
contrib/: aund.conf
contrib/aund/: aund.passwd
contrib/libsigrokdecode/: README.md
contrib/libsigrokdecode/econet/: __init__.py  pd.py
contrib/peb/: README.md  go  pgb.config
fsroot/web/: index.html
main/: CMakeLists.txt  aun_bridge.c  aun_bridge.h  config.c  config.h  crypt.c  crypt.h  econet.c  econet.h  econet_rx.c  econet_tx.c  http.c  http.h  http_ws.c  logging.c  logging.h  main.c  trunk.c  trunk.h  utils.h  wifi.c  wifi.h
misc/: calcflag.py  decodebits.py  first_attempt_isr.c  fourth_try.c  main_bak.c  second_try_spi.c  sendaun.py  third_try_i2s.c
web/: Makefile  README.md  index.html  mockserver.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/layout/: EditableTable.svelte  Footer.svelte  Navbar.svelte  Sidebar.svelte
web/src/components/pages/: EconetClockPage.svelte  EconetPage.svelte  EconetUplinks.svelte  LogsPage.svelte  StatusPage.svelte  SystemPage.svelte  WifiApPage.svelte  WifiPage.svelte
web/src/components/ui/: ConnectionStatus.svelte  StatItem.svelte
web/src/lib/: stores.ts  types.ts  ws.ts
